--- a/packages/terre2/assets/templates/WebGAL_Template/manifest.json
+++ b/packages/terre2/assets/templates/WebGAL_Template/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "WebGAL",
-  "short_name": "WebGAL",
+  "name": "idoltime",
+  "short_name": "idoltime",
   "start_url": ".",
   "display": "fullscreen",
-  "description": "WebGAL DEMO",
+  "description": "idoltime",
   "dir": "auto",
   "orientation": "landscape",
   "icons": [
