--- a/packages/terre2/package.json
+++ b/packages/terre2/package.json
@@ -19,9 +19,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "pkg": "cd dist && pkg main.js -o WebGAL_Terre",
+    "pkg": "cd dist && pkg main.js -o IdolTime_Editor",
     "replace": "node replace.js",
-    "pkg:linux-arm64": "cd dist && pkg main.js -o WebGAL_Terre -t node18-linux-arm64"
+    "pkg:linux-arm64": "cd dist && pkg main.js -o IdolTime_Editor -t node18-linux-arm64"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.5",
