--- a/packages/origine2/package.json
+++ b/packages/origine2/package.json
@@ -39,6 +39,9 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.51.0",
     "swr": "^2.2.4",
+    "antd": "^5.16.1",
+    "js-md5": "^0.8.3",
+    "react-router-dom": "^6.22.3",
     "webgal-parser": "latest"
   },
   "devDependencies": {
