chore: update mac exported game icon

--- a/packages/WebGAL-electron/package.json
+++ b/packages/WebGAL-electron/package.json
@@ -37,7 +37,7 @@
       ]
     },
     "mac": {
-      "icon": "public/icon-mac.ico"
+      "icon": "public/icon-mac.png"
     },
     "electronDownload": {
       "mirror": "https://npmmirror.com/mirrors/electron/"
