--- a/packages/WebGAL-electron/package.json
+++ b/packages/WebGAL-electron/package.json
@@ -17,9 +17,9 @@
     "electron-builder": "^23.0.3"
   },
   "build": {
-    "productName": "WebGAL",
-    "appId": "com.wtc.webgal",
-    "copyright": "webgal",
+    "productName": "IdolTime",
+    "appId": "com.projectx.idoltime",
+    "copyright": "idoltime",
     "directories": {
       "output": "build"
     },
