--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -89,28 +89,28 @@ jobs:
           cd packages/WebGAL-electron
           yarn install --frozen-lockfile
           yarn run build:arm64
-          mkdir ../../release/assets/templates/WebGAL_Electron_Template
-          cp -rf build/linux-arm64-unpacked/* ../../release/assets/templates/WebGAL_Electron_Template/
+          mkdir ../../release/assets/templates/IdolTime_Electron_Template
+          cp -rf build/linux-arm64-unpacked/* ../../release/assets/templates/IdolTime_Electron_Template/
           cd ../../
           # 克隆 WebGAL Android 模板
           cd release/assets/templates/
           git clone https://github.com/nini22P/WebGAL-Android.git
-          mv WebGAL-Android WebGAL_Android_Template
+          mv WebGAL-Android IdolTime_Android_Template
           # MainActivity.kt 移动到主文件夹防止误删
-          mv WebGAL_Android_Template/app/src/main/java/com/openwebgal/demo/MainActivity.kt WebGAL_Android_Template/app/src/main/java/MainActivity.kt
+          mv IdolTime_Android_Template/app/src/main/java/com/openwebgal/demo/MainActivity.kt IdolTime_Android_Template/app/src/main/java/MainActivity.kt
           cd ../../../
           cd release
           # 删除冗余文件
           rm -rf Exported_Games/*
           rm -rf public/games/*
           rm -rf public/games/.gitkeep
-          rm -rf assets/templates/WebGAL_Template/game/video/*
-          rm -rf assets/templates/WebGAL_Template/game/video/.gitkeep
-          rm -rf assets/templates/WebGAL_Android_Template/.github
-          rm -rf assets/templates/WebGAL_Android_Template/.git
-          rm -rf assets/templates/WebGAL_Android_Template/.gitattributes
-          rm -rf assets/templates/WebGAL_Android_Template/app/src/main/assets/webgal/.gitkeep
-          rm -rf assets/templates/WebGAL_Android_Template/app/src/main/java/com
+          rm -rf assets/templates/IdolTime_Template/game/video/*
+          rm -rf assets/templates/IdolTime_Template/game/video/.gitkeep
+          rm -rf assets/templates/IdolTime_Android_Template/.github
+          rm -rf assets/templates/IdolTime_Android_Template/.git
+          rm -rf assets/templates/IdolTime_Android_Template/.gitattributes
+          rm -rf assets/templates/IdolTime_Android_Template/app/src/main/assets/webgal/.gitkeep
+          rm -rf assets/templates/IdolTime_Android_Template/app/src/main/java/com
           echo "WebGAL Terre is now ready to be deployed."
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
