--- a/packages/origine2/package.json
+++ b/packages/origine2/package.json
@@ -40,7 +40,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.51.0",
     "swr": "^2.2.4",
-    "webgal-parser": "latest"
+    "webgal-parser": "file:../../../WebGAL/packages/parser"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
