chore: game login

--- a/packages/terre2/package.json
+++ b/packages/terre2/package.json
@@ -24,21 +24,28 @@
     "pkg:linux-arm64": "cd dist && pkg main.js -o IdolTime_Editor -t node18-linux-arm64"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.609.0",
+    "@aws-sdk/lib-storage": "^3.609.0",
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^9.0.5",
     "@nestjs/core": "^9.0.5",
     "@nestjs/platform-express": "^9.0.5",
     "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^7.1.13",
+    "archiver": "^7.0.1",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "idoltime-parser": "latest",
     "open": "^8.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^5.0.0",
     "vscode-languageserver": "^8.1.0",
-    "idoltime-parser": "latest",
     "ws": "^8.8.1"
   },
   "devDependencies": {
+    "@aws-sdk/types": "^3.609.0",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
