--- a/packages/terre2/package.json
+++ b/packages/terre2/package.json
@@ -26,14 +26,13 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.609.0",
     "@aws-sdk/lib-storage": "^3.609.0",
-    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^9.0.5",
     "@nestjs/core": "^9.0.5",
     "@nestjs/platform-express": "^9.0.5",
     "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^7.1.13",
     "archiver": "^7.0.1",
-    "axios": "^1.7.2",
+    "axios": "0.27.2",
     "dotenv": "^16.4.5",
     "idoltime-parser": "latest",
     "open": "^8.4.0",
