fix: electorn启动清除缓存

--- a/packages/WebGAL-electron/package.json
+++ b/packages/WebGAL-electron/package.json
@@ -43,5 +43,7 @@
       "mirror": "https://npmmirror.com/mirrors/electron/"
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "localforage": "^1.10.0"
+  }
 }
