--- a/packages/origine2/package.json
+++ b/packages/origine2/package.json
@@ -24,6 +24,7 @@
     "cloudlogjs": "^1.0.11",
     "flv.js": "^1.6.2",
     "i18next": "^22.4.15",
+    "idoltime-parser": "latest",
     "lodash": "^4.17.21",
     "material-icon-theme": "^4.27.0",
     "mitt": "^3.0.1",
@@ -40,13 +41,14 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.51.0",
     "swr": "^2.2.4",
-    "idoltime-parser": "latest"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.0",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "@vitejs/plugin-react": "^4.0.4",
