--- a/packages/origine2/package.json
+++ b/packages/origine2/package.json
@@ -40,15 +40,13 @@
     "react-redux": "^8.0.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.51.0",
-    "swr": "^2.2.4",
-    "uuid": "^10.0.0"
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.0",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.0",
-    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "@vitejs/plugin-react": "^4.0.4",
