fix:设置页面UI替换

--- a/packages/terre2/package.json
+++ b/packages/terre2/package.json
@@ -7,7 +7,7 @@
   "license": "MPL-2.0",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "nest build && node ./copyFiles.js",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -33,11 +33,12 @@
     "@nestjs/swagger": "^7.1.13",
     "archiver": "^7.0.1",
     "axios": "0.27.2",
+    "cross-spawn-windows-exe": "^1.2.0",
     "dotenv": "^16.4.5",
+    "fs-extra": "^11.2.0",
     "idoltime-parser": "latest",
     "open": "^8.4.0",
     "rcedit": "^4.0.1",
-    "cross-spawn-windows-exe": "^1.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
