--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
       "**/electron/**"
     ]
   },
-  "dependencies": {},
+  "dependencies": {
+    "cross-spawn-windows-exe": "^1.2.0"
+  },
   "devDependencies": {
     "concurrently": "^7.2.2",
     "iconv-lite": "^0.6.3"
