--- a/packages/terre2/package.json
+++ b/packages/terre2/package.json
@@ -7,7 +7,7 @@
   "license": "MPL-2.0",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build && node ./copyFiles.js",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
