--- a/packages/origine2/package.json
+++ b/packages/origine2/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@uiw/react-json-view": "^2.0.0-alpha.12",
     "axios": "0.27.2",
+    "antd": "^5.18.3",
     "cloudlogjs": "^1.0.11",
     "flv.js": "^1.6.2",
     "i18next": "^22.4.15",
@@ -40,7 +41,8 @@
     "react-redux": "^8.0.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.51.0",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "styled-components": "6.1.11"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
