--- a/packages/WebGAL-electron/package.json
+++ b/packages/WebGAL-electron/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "webgal-electron-project",
+  "name": "idoltime",
   "version": "1.0.0",
-  "description": "WebGAL Electron Support",
+  "description": "idolTime Electron Support",
   "main": "main.js",
   "repository": "https://github.com/WebGAL-Technical-Committee/WebGAL-Electron-Project.git",
-  "author": "Mahiru <makinoharashoko@outlook.com>",
+  "author": "idoltime",
   "license": "MPL-2.0",
   "scripts": {
     "start": "electron .",
