--- a/packages/WebGAL-electron/package.json
+++ b/packages/WebGAL-electron/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/WebGAL-Technical-Committee/WebGAL-Electron-Project.git",
   "author": "idoltime",
   "license": "MPL-2.0",
+  "companyName": "IdolTime",
   "scripts": {
     "start": "electron .",
     "build": "electron-builder",
