--- a/packages/terre2/package.json
+++ b/packages/terre2/package.json
@@ -63,7 +63,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.0.3",
-    "pkg": "^5.8.0",
+    "@yao-pkg/pkg": "^5.15.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
